Closed Bug 1738584 Opened 4 years ago Closed 4 years ago

Perma DevEdition TEST-UNEXPECTED-FAIL | layout/style/test/test_all_shorthand.html | computed value for border-inline-end-color when 'all:initial' set with setProperty - got "rgb(251, 251, 254)", expected "rgb(0, 0, 0)- when Gecko 95 => Beta on 2021-11-01

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- unaffected
firefox95 + fixed

People

(Reporter: smolnar, Unassigned)

References

(Regression)

Details

(Keywords: regression)

[Tracking Requested - why for this release]:

TEST-PASS | layout/style/test/test_all_shorthand.html | computed value for appearance when 'all:initial' set with setProperty [task 2021-10-31T12:26:26.026Z] 12:26:26 INFO - Buffered messages finished [task 2021-10-31T12:26:26.027Z] 12:26:26 INFO - TEST-UNEXPECTED-FAIL | layout/style/test/test_all_shorthand.html | computed value for border-inline-end-color when 'all:initial' set with setProperty - got "rgb(251, 251, 254)", expected "rgb(0, 0, 0)" [task 2021-10-31T12:26:26.027Z] 12:26:26 INFO - SimpleTest.is@SimpleTest/SimpleTest.js:500:14 [task 2021-10-31T12:26:26.027Z] 12:26:26 INFO - runTest/<@layout/style/test/test_all_shorthand.html:95:7 [task 2021-10-31T12:26:26.027Z] 12:26:26 INFO - runTest@layout/style/test/test_all_shorthand.html:90:25 [task 2021-10-31T12:26:26.027Z] 12:26:26 INFO - onload@layout/style/test/test_all_shorthand.html:1:1

Flags: needinfo?(emilio)
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/autoland/rev/7270f00ee9ac Initial color should be based on default color-scheme, not preferred color-scheme.
Flags: needinfo?(emilio)
Depends on: 1738613
No longer depends on: 1738613
Severity: -- → S3
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.