Bug 1738584 - Initial color should be based on default color-scheme, not preferred color-scheme.

MANUAL PUSH: One-liner regression fix CLOSED TREE